# shuffling

./: pyproject.toml  shuffle.py
